--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,1 +1,7 @@
-{}
+{
+  "promptDelete": false,
+  "attachmentFolderPath": "Images",
+  "alwaysUpdateLinks": true,
+  "newFileLocation": "current",
+  "showUnsupportedFiles": false
+}
